Fixed overflow

--- a/nebulast/www/css/index.css
+++ b/nebulast/www/css/index.css
@@ -48,6 +48,7 @@
 
 body  {
      font-family: pix PixelFJVerdana12ptimport;
+     overflow: hidden;
      background-image: url('BG001.jpg') ;
      background-position: center center;
      background-repeat:  no-repeat;
